--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>hello world</title>
   </head>
   <body>
-    <p>This is normal text - <b>and this is bold text</b>.</p>
+    <p><b>ABOUT</b>.</p>
 
 
 <h1> hello world</h1<
