--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>hello world</title>
   </head>
   <body>
-    <p><center><b>ABOUT</b></center></p>
+    <p><font size="6"><center><b>ABOUT</b></center></font></p>
+
 
 
 <h1> hello world</h1<
