changed size of pic

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>hello world</title>
   </head>
   <body>
-    <img src="https://upload.wikimedia.org/wikipedia/en/thumb/6/64/New_York_City_Housing_Authority_%28logo%29.svg/1200px-New_York_City_Housing_Authority_%28logo%29.svg.png" alt="Smiley face" height="42" width="42">
+    <img src="https://upload.wikimedia.org/wikipedia/en/thumb/6/64/New_York_City_Housing_Authority_%28logo%29.svg/1200px-New_York_City_Housing_Authority_%28logo%29.svg.png" height="100" width="100">
 
 
     <p><font size="6"><center><b>ABOUT</b></center></font></p>
