--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 
     <p><font size="6"><center><b>ABOUT</b></center></font></p>
 
+    <button type="button"> TEAM</button>
+    <button type="button">JOBS</button>
+    <button type="button">VOLUNTEER</button>
+    <button type="button">HIS/HER STORY</button>
+    <button type="button">MANAGMENT INFO</button>
+    <button type="button">MISSION</button>
 
 
 
