tried to center button

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 
     <p><font size="6"><center><b>ABOUT</b></center></font></p>
 
-    <button type="button"> TEAM</button>
-    <button type="button">JOBS</button>
-    <button type="button">VOLUNTEER</button>
-    <button type="button">HIS/HER STORY</button>
-    <button type="button">MANAGMENT INFO</button>
-    <button type="button">MISSION</button>
+    <button type="button"><center> TEAM</center></button>
+    <button type="button"><center>JOBS</center></button>
+    <button type="button"><center>VOLUNTEER</center></button>
+    <button type="button"><center>HIS/HER STORY</center></button>
+    <button type="button"><center>MANAGMENT INFO</center></button>
+    <button type="button"><center>MISSION</center></button>
 
 
 
