--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <p><font size="6"><center><b>ABOUT</b></center></font></p>
 
-
+    <div align="justify">
     <div style="text-align: center;">
     <button type="button"> TEAM</button>
     <button type="button">JOBS</button>
@@ -19,6 +19,7 @@
     <button type="button">MANAGMENT INFO</button>
     <button type="button">MISS</button>
     </div>
+  </div>
 
 
 <h2>
