--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 
 
     <p><font size="6"><center><b>ABOUT</b></center></font></p>
+    <input type="button" style="background-color:black;color:white;width:150px;height:40px;" value="Click Me!!">
 
-    <div align="justify">
+
     <div style="text-align: center;">
     <button type="button"> TEAM</button>
     <button type="button">JOBS</button>
@@ -19,7 +20,6 @@
     <button type="button">MANAGMENT INFO</button>
     <button type="button">MISS</button>
     </div>
-  </div>
 
 
 <h2>
