changed button style

--- a/index.html
+++ b/index.html
@@ -9,10 +9,16 @@
 
 
     <p><font size="6"><center><b>ABOUT</b></center></font></p>
-    <input type="button" style="background-color:black;color:white;width:150px;height:40px;" value="Click Me!!">
 
 
     <div style="text-align: center;">
+      <input type="button" style="background-color:black;color:white;width:150px;height:40px;" value="TEAM">
+      <input type="button" style="background-color:black;color:white;width:150px;height:40px;" value=" JOBS">
+      <input type="button" style="background-color:black;color:white;width:150px;height:40px;" value="MANAGMENT INFO">
+      <input type="button" style="background-color:black;color:white;width:150px;height:40px;" value="HIS/HER STORY">
+      <input type="button" style="background-color:black;color:white;width:150px;height:40px;" value="MISSION">
+      <input type="button" style="background-color:black;color:white;width:150px;height:40px;" value="VOLUNTEER">
+
     <button type="button"> TEAM</button>
     <button type="button">JOBS</button>
     <button type="button">VOLUNTEER</button>
