trying flex box

--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+      <link rel="stylesheet" href="styles.css">
     <meta charset="utf-8">
     <title>hello world</title>
   </head>
   <body>
     <img src="https://upload.wikimedia.org/wikipedia/en/thumb/6/64/New_York_City_Housing_Authority_%28logo%29.svg/1200px-New_York_City_Housing_Authority_%28logo%29.svg.png" height="100" width="100">
-
+    <div class="flex-container">
+      <div>1</div>
+      <div>2</div>
+      <div>3</div>
+    </div>
 
     <p><font size="6"><center><b>ABOUT</b></center></font></p>
 <hr>
