--- a/index.html
+++ b/index.html
@@ -1,22 +1,18 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-      <link rel="stylesheet" href="styles.css">
+      <link rel="stylesheet" href="pepperoni.css">
     <meta charset="utf-8">
     <title>hello world</title>
   </head>
   <body>
     <img src="https://upload.wikimedia.org/wikipedia/en/thumb/6/64/New_York_City_Housing_Authority_%28logo%29.svg/1200px-New_York_City_Housing_Authority_%28logo%29.svg.png" height="100" width="100">
-    <div class="flex-container">
-      <div>1</div>
-      <div>2</div>
-      <div>3</div>
-    </div>
+
 
     <p><font size="6"><center><b>ABOUT</b></center></font></p>
 <hr>
 
-    <div style="text-align: center;">
+    <div class="pictures"style="text-align: center;">
       <input type="button" style="background-color:black;color:white;width:150px;height:40px;" value="TEAM">
       <input type="button" style="background-color:black;color:white;width:150px;height:40px;" value=" JOBS">
       <input type="button" style="background-color:black;color:white;width:150px;height:40px;" value="MANAGMENT INFO">
