--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <p><font size="6"><center><b>ABOUT</b></center></font></p>
 <hr>
 
-    <div style="text-align: center;">
+    <div class= "pic"style="text-align: center;">
       <input type="button" style="background-color:black;color:white;width:150px;height:40px;" value="TEAM">
       <input type="button" style="background-color:black;color:white;width:150px;height:40px;" value=" JOBS">
       <input type="button" style="background-color:black;color:white;width:150px;height:40px;" value="MANAGMENT INFO">
