--- a/index.html
+++ b/index.html
@@ -5,9 +5,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
+  <style type="text/css" media="screen">
+body{
+  background- color: #000;
+  color:#60eb23;
+  font-size:30px;
+  font-family: 'Comic Sans MS', cursive, cans serif;
+  font-weight: 400;
+
+
+}
+
+    </style>
 </head>
-<body>
-  <div class="wrapper" style="border: 10px solid pnkS;">
+<body style="background-color: #49FF33; color:#333CFF; font-size: 60px; font-family: 'Comic Sans MS', cursive, sans serif;>
+  <div class="wrapper" style="border: 10px solid pink;">
+    <p>我爱你</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
   </div>
 </body>
