--- a/index.html
+++ b/index.html
@@ -1,27 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
   <style type="text/css" media="screen">
-body{
-  background- color: #000;
-  color:#60eb23;
-  font-size:30px;
-  font-family: 'Comic Sans MS', cursive, cans serif;
-  font-weight: 400;
+    body {
+      /* background-color: #000; */
+      color: #60eb23;
+      font-size: 30px;
+      font-family: 'Comic Sans MS', cursive, cans serif;
+      font-weight: 400;
+    }
 
+    header {
+      background-color: blue !important;
+      display:flex;
+      justify-content: space-between;
+      align-items: center;
+    }
 
-}
+    .main {
+      background-color: orange;
+    }
 
-    </style>
+    #main {
+      color: blue;
+    }
+
+    menu ul {
+      margin: 0;
+      padding: 0;
+    }
+
+    menu ul li {
+      display: inline;
+      padding-right: 5px;
+    }
+  </style>
 </head>
-<body style="background-color: #49FF33; color:#333CFF; font-size: 60px; font-family: 'Comic Sans MS', cursive, sans serif;>
-  <div class="wrapper" style="border: 10px solid pink;">
-    <p>我爱你</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+<body>
+  <div class="wrapper" styles=" ">
+    <header class="header" role="banner" style="background-color: red;">
+      <div class="logo" role="img">
+        <img src="https://picsum.photos/100" alt="company logo">
+      </div>
+
+      <nav>
+        <nav>
+          <menu>
+            <ul>
+              <li>about</li>
+              <li>resources</li>
+              <li>events</li>
+            </ul>
+          </menu>
+        </nav>
+    </header>
+    <main class="main" id="mainID">
+      this is main
+    </main>
+    <footer>
+      this is footer
+    </footer>
+
+
+
+
+
   </div>
 </body>
+
 </html>
