--- a/index.html
+++ b/index.html
@@ -6,39 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
+  <link rel="stylesheet" href="css/styles.css">
   <style type="text/css" media="screen">
-    body {
-      /* background-color: #000; */
-      color: #60eb23;
-      font-size: 30px;
-      font-family: 'Comic Sans MS', cursive, cans serif;
-      font-weight: 400;
-    }
-
-    header {
-      background-color: blue !important;
-      display:flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-
-    .main {
-      background-color: orange;
-    }
-
-    #main {
-      color: blue;
-    }
-
-    menu ul {
-      margin: 0;
-      padding: 0;
-    }
-
-    menu ul li {
-      display: inline;
-      padding-right: 5px;
-    }
   </style>
 </head>
 
@@ -61,10 +30,20 @@
         </nav>
     </header>
     <main class="main" id="mainID">
-      this is main
-    </main>
-    <footer>
-      this is footer
+      <div class="boxes">
+        <div class="box">
+        <h1>box 1</h1>
+        <p>content here</p>
+        </div>
+        <div class="box">box 2</div>
+        <div class="box">box 3</div>
+      </div>
+        </main>
+
+<footer>
+
+
+
     </footer>
 
 
